clusters/hive/apps/archive/apps/karakeep/k8s-manifests/meilisearch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: karakeep
spec:
  selector:
    app: meilisearch
  ports:
    - protocol: TCP
      port: 7700
      targetPort: 7700
