clusters/hive/apps/archive/apps/karakeep/k8s-manifests/karakeep-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep
  namespace: karakeep
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: karakeep.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: karakeep
                port:
                  number: 3000
            path: /
            pathType: Prefix
